PROJ_0003 Initial version  of local kubernetes deployment

--- a/deployment-local/camunda-values.yaml
+++ b/deployment-local/camunda-values.yaml
@@ -1,45 +1,103 @@
+# Chart values for the Camunda Platform 8 Helm chart.
+# This file deliberately contains only the values that differ from the defaults.
+# For changes and documentation, use your favorite diff tool to compare it with:
+# https://github.com/camunda/camunda-platform-helm/blob/main/charts/camunda-platform/values.yaml
+#  ingress:
+#    enabled: true
+#    className: nginx
+#    host: "localhost"
+
 global:
-  identity:
-    keycloak:
-      url:
-        protocol: "http"
-        host: "localhost"
-        port: "8080"
-      realm: "camunda-platform"
-      auth:
-        adminUser: "kcadmin"
-        adminPassword: "admin.1234"
+  image:
+    tag: latest
+    # pullPolicy: Always
 
-# Disable identity as part of the Camunda core
-identity:
-  enabled: true
+operate:
+  image:
+    tag: 8.5.4
 
-# Disable keycloak
-identityKeycloak:
+tasklist:
+  image:
+    tag: 8.5.2
+
+connectors:
   enabled: false
 
 optimize:
   enabled: false
 
-# Reduce for Zeebe and Gateway the configured replicas and with that the required resources
-# to get it running locally
+webModeler:
+  enabled: false 
+
+identity:
+  image:
+    tag: 8.5.3
+  enabled: true
+  firstUser:
+    username: demo
+    password: demo.1234
+  resources:
+    requests:
+      memory: "512Mi"
+      cpu: "250m"
+    limits:
+      memory: "1024Mi"
+      cpu: "500m"
+
+identityKeycloak:
+  enabled: "true"
+  auth: 
+    adminUser: "kcadmin"
+    adminPassword: "admin.1234"
+
+zeebe-gateway:
+  image:
+    tag: 8.5.3
+  ingress:
+    enabled: true
+    className: nginx
+    host: "localhost"
+  replicas: 1
+  resources:
+    requests:
+      memory: "512Mi"
+      cpu: "250m"
+    limits:
+      memory: "1024Mi"
+      cpu: "500m"
+
 zeebe:
+  image:
+    tag: 8.5.3
   clusterSize: 1
   partitionCount: 1
   replicationFactor: 1
   pvcSize: 10Gi
-
-zeebeGateway:
-  replicas: 1
-
-connectors:
-  enabled: true
-  inbound:
-    mode: disabled
+  resources:
+    requests:
+      cpu: "1"
+      memory: "512Mi"
+    limits:
+      cpu: "2"
+      memory: "1Gi"
 
 elasticsearch:
+  image: 
+    repository: "bitnami/elasticsearch"
+    tag: "8.12.2"
   master:
     replicaCount: 1
+    heapSize: "256m"
     # Request smaller persistent volumes.
     persistence:
-      size: 15Gi
+      size: "15Gi"
+    resources:
+      requests:
+        cpu: "1"
+        memory: "512Mi"
+      limits:
+        cpu: "2"
+        memory: "1Gi"
+
+
+
