--- a/microservices/demo-camunda-8/src/main/resources/application.properties
+++ b/microservices/demo-camunda-8/src/main/resources/application.properties
@@ -47,7 +47,7 @@ keycloak.issuer-url=${AUTH_SERVER_URL}/realms/${AUTH_SERVER_REALM}
 keycloak.public-client=true
 keycloak.principal-attribute=preferred-username
 #keycloak.use-resource-role-mappings=true
-#keycloak.ssl-required=external
+
 server.connection-timeout=6000
 keycloak.credentials.secret=${AUTH_SERVER_SECRET}
 spring.security.oauth2.client.registration.keycloak.client-id=${AUTH_SERVER_RESOURCE}
@@ -79,19 +79,6 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.api-docs.path=/api-docs
 springdoc.show-actuator=true
 
-spring.ssl.bundle.jks.serverkey.reload-on-update=false
-spring.ssl.bundle.jks.serverkey.key.alias=serverkey
-spring.ssl.bundle.jks.serverkey.keystore.location=classpath:serverkeystore.p12
-spring.ssl.bundle.jks.serverkey.keystore.password=${KEYSTORE_PASSWORD}
-spring.ssl.bundle.jks.serverkey.keystore.type=PKCS12
-
-spring.ssl.bundle.pem.client.truststore.certificate=classpath:client-certificate.pem
-spring.ssl.bundle.pem.client.truststore.password=${KEYSTORE_PASSWORD}
-
-server.ssl.enabled=true
-server.ssl.bundle=serverkey
-server.ssl.client-auth=none
-
 operate.base.url=${OPERATE_BASE_URL}
 operate.client=${OPERATE_CLIENT_ID}
 operate.client.secret=${OPERATE_CLIENT_SECRET}
@@ -106,3 +93,7 @@ service.api.password=${API_USER_PASSWORD}
 zeebe.base.url=${ZEEBE_BASE_URL}
 
 logging.level.org.springframework.security=DEBUG
+
+# Disable ssl 
+server.ssl.enabled = false
+
